terraform/main.tf
provider "aws" {
  region = var.region
}

resource "aws_security_group" "web_sg" {
  name = "web-sg"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Jenkins"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "web" {
  ami           = "ami-0f5ee92e2d63afc18"
  instance_type = "t2.micro"
  key_name      = var.key_name

  vpc_security_group_ids = [aws_security_group.web_sg.id]

  user_data = <<-EOF
              #!/bin/bash
              yum update -y

              # Install Nginx
              yum install nginx git -y
              systemctl start nginx
              systemctl enable nginx

              # Install Java
              amazon-linux-extras enable corretto8
              yum install java-1.8.0-amazon-corretto -y

              # Install Jenkins
              wget -O /etc/yum.repos.d/jenkins.repo https://pkg.jenkins.io/redhat-stable/jenkins.repo
              rpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io.key
              yum install jenkins -y
              systemctl start jenkins
              systemctl enable jenkins

              # Initial web page
              echo "<h1>Welcome Meghaa 🚀</h1>" > /usr/share/nginx/html/index.html
              EOF

  tags = {
    Name = "CI-CD-Server"
  }
}
